--- a/public_html/home_BiPartite.html
+++ b/public_html/home_BiPartite.html
@@ -38,7 +38,7 @@ and open the template in the editor.
                         .append("g").attr("transform", "translate(" + margin.l + "," + margin.t + ")");
 
                 var data = [
-                    {data: bP.partData(sales_data, 2), id: 'Sales', header: ["Industry", "Size", "Count of Company"]}
+                    {data: bP.partData(sales_data, 2), id: 'Sales', header: ["Industry", "Size", "Count of Company by Sales"]}
                 ];
 
                 bP.draw(data, svg);
