don't click right to next page

--- a/public_html/BOD.html
+++ b/public_html/BOD.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8">
 <title>Treemap Of Board Directors</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-<script src="http://d3js.org/d3.v2.js"></script>
-<script src="http://code.jquery.com/jquery-1.7.1.js"></script>
+<script src="js/libs/d3/d3.v3.js" type="text/javascript"></script>
+<script src="js/jquery-1.7.1.js" type="text/javascript"></script>
 
 <p id="chart">
 <p id="rawdata">
