--- a/public_html/homepage.html
+++ b/public_html/homepage.html
@@ -119,19 +119,16 @@ body.custom-background { background-image: url('https://ateliercartographie.file
 			</ul>
 			<hr />
 			<h2>Menu</h2>
-                        <div class="highwind-navigation"><ul id="menu-menu" class="menu"><li id="menu-item-112" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-112"><a href="home page of project">Home</a></li><li id="menu-item-113" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-113"><a href="Sub page 1: ranking">BoD Rank</a></li><li id="menu-item-114" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-114"><a></a></li><li id="menu-item-115" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-115"><a href="Sub Page 2: jingyu">Company Distribution</a></li><li id="menu-item-116" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-116"><a href="Sub Page 3: xixi">Industry Relationship</a></li></ul></div>
+                        <div class="highwind-navigation"><ul id="menu-menu" class="menu"><li id="menu-item-112" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-112"><a href="homepage.html">Home</a></li><li id="menu-item-115" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-115"><a href="https://dl.dropboxusercontent.com/u/95507637/public_html/biPartite.html">Company Distribution</a></li><li id="menu-item-116" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-116"><a href="https://dl.dropboxusercontent.com/u/95507637/public_html/index.html">Industry Relationship</a></li><li id="menu-item-113" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-113"><a href="https://dl.dropboxusercontent.com/u/95507637/public_html/BOD.html">BoD Ranking</a></li></ul></div>
 		</nav><!-- /.main-nav -->
 
 		<div class="site-branding">
-			<a href="" title="L&#039;Atelier de Cartographie" rel="home" class="site-intro">
+			<a href="" title="IS428 Group 10 Velation" rel="home" class="site-intro">
 									<img src="https://ateliercartographie.files.wordpress.com/2013/11/avatar.png" alt="" class="highwind-logo" />
 							<h1 class="site-title">Interlocking Directorate and Industry Relationships in China</h1>
-			<h2 class="site-description">Cartographie, Information, Rank</h2>
+			<h2 class="site-description">BiPartite, Network Graph, Treemap</h2>
 			</a>
 		</div>
-	</header><!-- #masthead -->
-	<div class="content-wrapper">
-
-
-	<div id="primary" class="content-area">
-		<main id="main" class="site-main" role="main">
+                </header><!-- #masthead -->
+        </div>
+</div>
